--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -23,3 +23,6 @@
 <br>
 
 <%= link_to 'New Athlete', new_athlete_path %>
+<br>
+<%= link_to 'Events', events_path %> |
+<%= link_to 'Athletes', athletes_path %>
