--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Events</h1>
-
 <table>
   <thead>
     <tr>
-      <th>Title</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,10 +11,8 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
-        <td><%= event.title %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to event.title, event  %></td>
+
       </tr>
     <% end %>
   </tbody>
