--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,9 +13,8 @@
 
 </p>
 
-
-<%= link_to 'Edit', edit_event_path(@event) %> 
+<%= link_to 'Edit', edit_event_path(@event) %> | 
+<%= link_to 'Destroy', @event, method: :delete, data: { confirm: 'Are you sure?' } %>
 <br><br>
-<%= link_to 'Runs', runs_path %> |
 <%= link_to 'Events', events_path %> |
 <%= link_to 'Athletes', athletes_path %>
