--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,23 +1,28 @@
 <p id="notice"><%= notice %></p>
+<% @events.each do |event| %>
+<div class="jumbotron">
+  <h1><%= link_to event.title, event %></h1>
+  <%= image_tag event.eventlogo.url(:medium) %>
+</div>
+<% end %>
+<% @events.each do |event| %>
+  <div class="col-sm-4">
+    <div class="panel panel-warning">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <%= link_to event.title, event  %>
+        </h3>
+      </div>
+      <div class="panel-body">
+        <% event.athletes.each do |athlete| %>
+          <%= athlete.name %>
+          <% athlete.runs.where(event_id: event.id).each do |run| %>
+            |
+            <%= link_to run.score, run %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>  
+  </div>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= link_to event.title, event  %></td>
-
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Event', new_event_path %>
