--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Athletes</h1>
-
+<div class="jumbotron">
+  <h1>Athletes</h1>
+</div>
 <table>
   <thead>
     <tr>
@@ -11,15 +11,31 @@
   </thead>
 
   <tbody>
-    <% @athletes.each do |athlete| %>
-      <tr>
-        <td><%= link_to  athlete.name, athlete %></td>
 
-      </tr>
-    <% end %>
   </tbody>
 </table>
-
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Event</th>
+        <th>Recent Event</th>
+        <th>Score</th>
+      </tr>
+    </thead>
+    <% @athletes.each do |athlete| %>
+      <tr>
+        <td>
+          <%= link_to  athlete.name, athlete %>
+        </td>
+        <td>
+          <%= link_to  athlete.events.last.title, athlete %>
+        </td>
+        <td>
+          <%= link_to  athlete.events.last.runs.last.score, athlete %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
 <br>
 
 <%= link_to 'New Athlete', new_athlete_path %>
