--- a/app/views/athletes/_form.html.erb
+++ b/app/views/athletes/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+
+<div class="field">
+  <%= f.select :nationality, Country.all.collect {|x| [x.name]}, {}, :multiple => false %>
+</div>
   <div class="field">
     <%= f.file_field :avatar %>
   </div> 
