--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -3,13 +3,13 @@
 <div class="jumbotron">
 	<h1><%= @athlete.name %></h1>
 	<%= image_tag @athlete.avatar.url(:medium) %>
+  <%= @athlete.nationality  %>
 </div>
 
 <table class="table table-hover">
     <thead>
       <tr>
         <th>Event</th>
-        <th>Nationality</th>
         <th>Score</th>
       </tr>
     </thead>
@@ -19,7 +19,6 @@
         <td>
         <%= link_to run.event.title, class: "btn btn-success"  %>
         </td>
-        <td>USA</td>
         <td>
         <%= link_to run.score, class: "btn btn-success"  %></td>
 	<% end %>
