--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,16 @@
  */
 
 body { padding-top: 70px; }
+
+
+#eventsJumbo{
+	background-image: url(/img/breck_bg.png);
+	background-size: cover;
+	background-position: bottom;
+	color: rgba(0, 0, 0, 0.58);
+
+}
+
+#eventsJumbo h1{
+	font-family: 'Raleway';
+}
