--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -2,42 +2,17 @@
 <div class="jumbotron">
   <h1>Athletes</h1>
 </div>
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
+<% @athletes.each do |athlete|  %>
+  <div class="col-md-3">
+  	<div class="jumbotron">
+  		<%= link_to (image_tag athlete.avatar.url(:thumb)), athlete %>
+  		<h4 class="text-center"><%= athlete.name %></h4>
+  	</div>
+  </div>
+<% end %>
 
-  </tbody>
-</table>
-<table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Event</th>
-        <th>Recent Event</th>
-        <th>Score</th>
-      </tr>
-    </thead>
-    <% @athletes.each do |athlete| %>
-      <tr>
-        <td>
-          <%= link_to  athlete.name, athlete %>
-        </td>
-        <td>
-          <%= link_to  athlete.events.last.title, athlete %>
-        </td>
-        <td>
-          <%= link_to  athlete.events.last.runs.last.score, athlete %>
-        </td>
-      </tr>
-    <% end %>
-  </table>
-<br>
-
+<div class="clearfix"></div>
 <%= link_to 'New Athlete', new_athlete_path %>
 <br>
 <%= link_to 'Events', events_path %> |
