added gender to athlete

--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -1,39 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <div class="jumbotron text-center">
+      <%= image_tag @athlete.avatar.url(:medium), class: "clearfix" %>  
+      <div class="clearfix"></div>
   <div class="col-md-6 clearfix">
-      <%= image_tag @athlete.avatar.url(:medium), class: "clearfix" %>      
+    
       <h1><%= @athlete.name %></h1>
-      <h1><%= @athlete.nationality %></h1>
-  </div>    
-  <div class="clearfix"></div>
-    <div class="col-md-6">
+  </div>   
+    <div class="col-md-6 clearfix">
     </div>
-    hi
+      <h1><%= @athlete.nationality %></h1>
 </div>
 
 <div class="col-md-6">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Event</th>
-        <th>Score</th>
-      </tr>
-    </thead>
-    <tbody>
-    <% @athlete.events.each do |event| %>
-      <tr class="success">
-        <td>
-        <%= link_to event.title, event, class: "btn btn-success"  %>
-        </td>
-        <td>
-        <%= link_to event.runs.where(athlete_id: @athlete), class: "btn btn-success"  %></td>
-  <% end %>
-
-      <br/>       
-      </tr>
-    </tbody>
-  </table>
+          <%= image_tag @athlete.runs.each.first.image.url(:thumb) %>
 </div>
 <div class="col-md-6">
   <table class="table table-hover">
