--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -31,6 +31,14 @@
     </div>
 
     <div class="form-group">
+      <label for="eventTitle" class="col-lg-2 control-label">
+    <%= f.label :date %></label>
+      <div class="col-lg-10">
+        <%= f.date_field :date %>  
+      </div>
+    </div>
+
+    <div class="form-group">
       <label for="eventTitle" class="col-lg-2 control-label">Athletes</label>
       <div class="col-lg-10">
             <%= f.select :athlete_ids, Athlete.all.collect {|x| [x.name, x.id]}, {}, :multiple => true, class: "form-control" %>        
