--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,6 +9,8 @@
       <div class="jumbotron">
           <h4><%= @event.date %></h4>
           <h4><%= @event.days_until_event %> days until <%= @event.title %></h4>
+          <%= link_to (image_tag @event.eventlogo.url(:favi)) %>
+
       </div>
   </div>
   <div class="col-md-6">
@@ -17,12 +19,15 @@
       </div>
   </div>
 </div>
-
+<%= @hiscore %>
 <!-- TABLE -->
 <table class="table table-hover table-condensed">
     <thead>
-      <tr>
-      </tr>
+      <th> </th>
+      <th> </th>
+      <th>Top Score</th>
+      <th>Add Run</th>
+
     </thead>
     <tbody>
     <% @athletes.each do |athlete| %>
@@ -34,26 +39,40 @@
           <%= link_to athlete.name, athlete, class: "btn btn-warning"  %>
 
         </td>
-        <td>
-          <%= athlete.nationality %>
-        </td>
 
+        <% if @runs.where(athlete_id: athlete).any? %>
         <td>
-      <% if @runs.where(athlete_id: athlete) %>
         <%= link_to @runs.where(athlete_id: athlete).order(score: :desc).collect{|x|x.score}[0], @event, class: "btn btn-success" %>
         </td>
+      <% end %>
+
+        <td>
+          <%= link_to "+", new_event_run_path(@event, athlete_id: athlete.id), class: "btn btn-primary" %>
+        </td>
+
+
 
         <% athlete.runs.where(:event_id => @event).order(score: :desc).each do |run| %>
           <td>
             <%= link_to run.score, run, class: "btn btn-error" %>
           </td>
         <% end %>
-      <% end %>
 
         <% athlete.runs.order(score: :desc) do |run| %>
         <td>
           <% run.athlete %>
         </td>
+        <% if run %>
+            <td>
+              <%= link_to run.score, run, class: "btn btn-success" %>
+            </td>
+        <% end %>
+        <% @runs.all.where(athlete_id: run.athlete.id).uniq.each do |allrun| %>
+            <td>
+              <%= allrun.score %>
+            </td>
+        <% end %>
+        </tr>
       <% end %>
       <td>
       </td>
@@ -67,7 +86,7 @@
 <!-- TABLE -->
 <table class="table table-hover table-condensed">
     <thead>
-      <tr>
+      <tr>d
       </tr>
     </thead>
     <tbody>
@@ -81,7 +100,7 @@
           <%= link_to run.athlete.name, run, class: "btn btn-warning"  %>
         </td>
 
-        <% if run.score > 32 %>
+        <% if run.score %>
             <td>
               <%= link_to run.score, run, class: "btn btn-success" %>
         <% end %>
@@ -99,7 +118,6 @@
         <% @athletes.each do |athlete| %>
           <%= athlete.name  %>
           <br/>
-          <%= @highscore.score  %>
         <% end %>
 
 <%= link_to 'New Run', new_run_path(@event) %> | 
