--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,4 +1,7 @@
+
 <%= form_for(@run) do |f| %>
+<form class="form-horizontal">
+  <fieldset>
   <% if @run.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@run.errors.count, "error") %> prohibited this run from being saved:</h2>
@@ -10,23 +13,36 @@
       </ul>
     </div>
   <% end %>
+  <h2><%= @athlete.name %> at the <%= @event.title %></h2>
+      <%= f.hidden_field :event_id, value: @event.id %>
+      <%= f.hidden_field :athlete_id, value: @athlete.id %>
+<div class="form-group">
+  <label class="control-label" for="inputDefault"><%= f.label :score %></label>
+    <br>
+    <%= f.text_field :score, class: "form-control" %>
+  </div>
 
-  <div class="field">
-    <%= f.select :athlete_id, Athlete.all.collect {|x| [x.name, x.id]}, {}, :multiple => false %>
+    <div class="form-group">
+      <label for="profilePicture" class="col-lg-2 control-label">Profile Picture</label>
+      <div class="col-lg-10">
+        <div class="checkbox">
+          <label>
+              <div class="field">
+                <%= f.file_field :eventlogo %>
+              </div>   
+          </label>
+        </div>
+      </div>
+    </div>
 
-  </div>
-  <div class="field">
-    <%= f.label :score %><br>
-    <%= f.text_field :score %>
-  </div>
+    <div class="form-group">
+      <div class="col-lg-12">
+        <button type="reset" class="btn btn-default">Cancel</button>
+        <button class="btn btn-primary">
+    <%= f.submit %></button>
+      </div>
+    </div>
+  </fieldset>
+</form>
 
-  <div class="field">
-    <%= f.select :event_id, @run.event %>
-  </div>
-  <div class="field">
-    <%= f.file_field :image %>
-  </div>  
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
